tests/def_site_variance/def_site_variance.exp
Error: test.js:2
  2:   foo(x: Out): Out { return x; }
              ^^^ Out. contravariant position (expected `Out` to occur only covariantly)

Error: test.js:3
  3:   bar(y: In): In { return y; }
                   ^^ In. covariant position (expected `In` to occur only contravariantly)

Error: test.js:13
 13:   (v1: Variance<B,A>); // error on both targs (A ~/~> B)
        ^^ Cannot cast `v1` to `Variance` because in type argument `In`, `B` [1] is incompatible with `A` [2].
  References:
   10:   v1: Variance<A,B>,
                        ^ [1]: `B`
   13:   (v1: Variance<B,A>); // error on both targs (A ~/~> B)
                         ^ [2]: `A`

Error: test.js:13
 13:   (v1: Variance<B,A>); // error on both targs (A ~/~> B)
        ^^ Cannot cast `v1` to `Variance` because in type argument `Out`, `A` [1] is incompatible with `B` [2].
  References:
   10:   v1: Variance<A,B>,
                      ^ [1]: `A`
   13:   (v1: Variance<B,A>); // error on both targs (A ~/~> B)
                       ^ [2]: `B`

Error: test.js:18
 18:   inv1: Out; // error
             ^^^ Out. invariant position (expected `Out` to occur only covariantly)

Error: test.js:19
 19:   inv2: In; // error
             ^^ In. invariant position (expected `In` to occur only contravariantly)

Error: test.js:20
 20:   -co1: Out; // error
             ^^^ Out. contravariant position (expected `Out` to occur only covariantly)

Error: test.js:23
 23:   +con2: In; // error
              ^^ In. covariant position (expected `In` to occur only contravariantly)

Error: test.js:25
 25:   inv_dict1: {[k:string]: Out}; // error
                               ^^^ Out. invariant position (expected `Out` to occur only covariantly)

Error: test.js:26
 26:   inv_dict2: {[k:string]: In}; // error
                               ^^ In. invariant position (expected `In` to occur only contravariantly)

Error: test.js:28
 28:   +co_dict2: {+[k:string]: In}; // error
                                ^^ In. covariant position (expected `In` to occur only contravariantly)

Error: test.js:29
 29:   +con_dict1: {-[k:string]: Out}; // error
                                 ^^^ Out. contravariant position (expected `Out` to occur only covariantly)


Found 12 errors
